# Python-Preparations

./: .gitignore  Complexity.md  Dockerfile  README.md  SOLID.MD  alembic.ini  code_quality.md  concurrency.md  counter3.prof  docker-compose.yml  git.md  hashable_objects.md  incorrect_login.py  iterators_generators.py  pyproject.toml  questions.md  setup.cfg  tox.ini
Complexity/: complexity.md
LEGB/: main.py
code/: add_list.py  add_list_from input.py  array_fill.py  async_task.py  async_wrapper.py  check_if_digit.py  coords.py  count_max.py  count_num2.py  count_number.py  cripto.py  custom_list.py  disasm.py  factorial.py  file_preprocess.py  for_break.py  grade_filter.py  guess_number.py  list_to_array.py  luna.py  max_int_in_list.py  min_array_elem.py  np_reader.py  number_limit.py  palindrom.py  passw.py  password_gen.py  path_split.py  pyqt_mod.py  quick_sort.py  revert_string.py  rexert_triangle.py  set_manage.py  simple_run.py  sort_add_numbers.py  split_array.py  time_converter.py  timer.py  travel_saleman_problem.py  triamgle.py  (+6 more)
context_manager/: context_manager.py
data_object/: data_types.py
dataclass_ex/: my_class.py
db_finder/: db_provider.py  main.py  models.py
decorators/: README.md  check_decorators.py  counter3.prof  main.py
documentation/: polimprphism.md  python_polymorhizm.md
exceptions/: readme.md
file_finder/: finder.py
files/: cyr_text.docx  cyr_text.txt
files_output/: Untitled.docx.txt  cyr_text.docx.docx  cyr_text.docx.txt
garbage_collector/: garbage_collector.py  readme.md
garbage_collector_memory_manage/: garbage_collector.py  memory_manage.py
leetcode/: add_two_number.py  buy_stock.py  buy_tickets.py  compare_value.py  dice_roll.py  diff_bet_zero.py  find_first_inex.py  longers_prefix.py  longest_substr.py  loop_comparison.py  merge_sorted_dict.py  palindrome.py  pascal_triangle.py  prime.py  remove_duplicates.py  remove_element.py  revers_int.py  revers_string.py  rotate_array.py  search_insert.py  sort_dict.py  two_sum.py  valid_parenthess.py
migrations/: env.py
multitasking/: Readme.md  multiproc_exmpl.py  multithread_exmpl.py
new_leetcode/: max_stock_profit.py  remove_duplicate.py
parser/: asyncio_parser.py  base_async_parser.py  base_parser.py  index_api.py  new_parser.py  requests_parser.py  selenium_async.py  selenium_parser.py  thread_base_parser.py  thread_concurrency_base_parser.py
pymongo_app/: main.py
read_bytecode/: main.py
short_examples/: call_func_name.py  cinema_place.py  classmethod.py  context_manager.py  custom.py  db_connect.py  examples.py  for_i.py  for_while.py  legb.py  mouse-move-2.html  mouse-move.html  parse_url.py  parser1.py  permissions.py  request_url.py  restore_ip.py  sort_deck_cards.py  sort_exmp.py  start_task.py  time_decorator.py  upper_decorator.py  (+3 more)
(+33 files in other folders)
