[tool.poetry]
name = "python-preparations"
version = "0.1.0"
description = "python examples"
authors = ["Viachaslau <viachaslau.kazakou@coxautoinc.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
attrs = "23.1.0"
requests = "==2.31.0"
httpx = "^0.25.2"
beautifulsoup4 = "^4.12.2"
structlog = "^23.2.0"
selenium = "==4.16.0"
bytecode = "^0.15"
sqlalchemy = "^2.0.25"
alembic = "^1.13.1"
psycopg2-binary= "==2.9.9"
pymongo = "==4.6.1"
flake8 = "^7.0.0"

[tool.poetry.group.dev.dependencies]
freezegun = "^1.2.2"
pytest = "^7.4.0"
pytest-mock = "^3.11.1"
pytest-factoryboy = "^2.5.1"
pytest-asyncio = "^0.21.1"
flake8 = "^7.0.0"
isort = "^5.10.1"
tox = "^3.26.0"
black = "^22.8.0"
mypy = "^0.981"
ipykernel = "^6.27.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
